--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "service-1",
-  "version": "0.0.1",
-  "main": "service.js",
   "scripts": {
-    "start": "node --harmony_destructuring service.js"
+    "start": "node service.js"
   },
   "dependencies": {
     "bluebird": "3.3.5",
