--- a/wercker.yml
+++ b/wercker.yml
@@ -4,7 +4,7 @@ build:
   steps:
     - npm-install
     - npm-test
-    
+
     # A custom script step, name value is used in the UI
     # and the code value contains the command that get executed
     - script:
@@ -12,3 +12,12 @@ build:
         code: |
           echo "node version $(node -v) running"
           echo "npm version $(npm -v) running"
+
+docker-push:
+  steps:
+    - internal/docker-push:
+        username: $USERNAME
+        password: $PASSWORD
+        tag: master
+        repository: naartjie/jbaas
+        registry: https://registry.hub.docker.com
