--- a/wercker.yml
+++ b/wercker.yml
@@ -25,4 +25,4 @@ docker-push:
         username: _json_key
         password: $GCR_JSON_KEY_FILE
         repository: gcr.io/swarm-sandbox/jbaas
-        registry: https://gcr.io
+        registry: https://gcr.io/v2
