--- a/wercker.yml
+++ b/wercker.yml
@@ -4,9 +4,6 @@ build:
   steps:
     - npm-install
     - npm-test
-
-    # A custom script step, name value is used in the UI
-    # and the code value contains the command that get executed
     - script:
         name: echo nodejs information
         code: |
@@ -15,23 +12,24 @@ build:
 
 docker-push:
   steps:
-    - script:
-        name: debug
-        code: |
-          echo "und...?"
-          echo "$GCR_JSON_KEY_FILE"
     - internal/docker-push:
         username: _json_key
         password: $GCR_JSON_KEY_FILE
         repository: gcr.io/swarm-sandbox/jbaas
         tag: $WERCKER_GIT_COMMIT
         registry: https://gcr.io
+    - internal/docker-push:
+        username: $DOCKERCLOUD_USERNAME
+        password: $DOCKERCLOUD_PASSWORD
+        repository: naartjie/jbaas
+        tag: $WERCKER_GIT_COMMIT
+        registry: https://registry.hub.docker.com/v2
 
 rolling-update:
   - kubectl:
-      server: $KUBERNETES_MASTER
-      username: $KUBERNETES_USERNAME
-      password: $KUBERNETES_PASSWORD
+      server: $K8S_MASTER
+      username: _json_key
+      password: $GCR_JSON_KEY_FILE
       insecure-skip-tls-verify: true
-      command: rolling-update cities
+      command: rolling-update jbaas
       image: gcr.io/swarm-sandbox/jbaas:$WERCKER_GIT_COMMIT
