add VERSION.txt meta

--- a/wercker.yml
+++ b/wercker.yml
@@ -12,6 +12,10 @@ build:
 
 docker-push:
   steps:
+    - script:
+        name: git sha version info
+        code: |
+          echo ${WERCKER_GIT_COMMIT:0:7} > VERSION.txt
     - internal/docker-push:
         username: _json_key
         password: $GCR_JSON_KEY_FILE
