--- a/wercker.yml
+++ b/wercker.yml
@@ -14,6 +14,7 @@ build:
         code: cp -r src node_modules package.json VERSION.txt "$WERCKER_OUTPUT_DIR"
 
 docker-push:
+  box: mhart/alpine-node
   steps:
     - script:
         name: git sha version info
