--- a/wercker.yml
+++ b/wercker.yml
@@ -23,7 +23,7 @@ docker-push:
           echo ${WERCKER_GIT_COMMIT:0:7} > VERSION.txt
           echo "version info..."
           cat VERSION.txt
-    - internal/docker-scratch-push:
+    - internal/docker-push:
         disable-sync: true
         username: _json_key
         password: $GCR_JSON_KEY_FILE
@@ -33,7 +33,7 @@ docker-push:
         env: "PORT=8080"
         ports: "8080"
         cmd: "npm start"
-    - internal/docker-scratch-push:
+    - internal/docker-push:
         disable-sync: true
         username: $DOCKERCLOUD_USERNAME
         password: $DOCKERCLOUD_PASSWORD
