--- a/wercker.yml
+++ b/wercker.yml
@@ -30,7 +30,7 @@ docker-push:
         repository: gcr.io/swarm-sandbox/jbaas
         registry: https://gcr.io
         tag: ${WERCKER_GIT_COMMIT},${WERCKER_GIT_COMMIT:0:7},latest
-        working-dir: "/app"
+        working-dir: /pipeline/source
         env: "PORT=8080"
         ports: "8080"
         cmd: "npm start"
@@ -41,7 +41,7 @@ docker-push:
         repository: naartjie/jbaas
         registry: https://registry.hub.docker.com/v2
         tag: ${WERCKER_GIT_COMMIT},${WERCKER_GIT_COMMIT:0:7},latest
-        working-dir: "/app"
+        working-dir: /pipeline/source
         env: "PORT=8080"
         ports: "8080"
         cmd: "npm start"
