use set image for updates

--- a/wercker.yml
+++ b/wercker.yml
@@ -52,8 +52,9 @@ rolling-update:
         server: $K8S_MASTER
         username: $K8S_USERNAME
         password: $K8S_PASSWORD
-        # username: _json_key
-        # password: $GCR_JSON_KEY_FILE
         insecure-skip-tls-verify: true
-        command: rolling-update jbaas
-        image: gcr.io/swarm-sandbox/jbaas:$WERCKER_GIT_COMMIT
+        command: set image deployments/jbaas gcr.io/swarm-sandbox/jbaas:$WERCKER_GIT_COMMIT
+        # password: $GCR_JSON_KEY_FILE
+        # username: _json_key
+        # command: rolling-update jbaas
+        # image: gcr.io/swarm-sandbox/jbaas:$WERCKER_GIT_COMMIT
